kubernetes/immich/backup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-db-dumper
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-db-dumper
  template:
    metadata:
      labels:
        app: immich-db-dumper
    spec:
      restartPolicy: Always
      containers:
        - name: immich-db-dumper
          image: prodrigestivill/postgres-backup-local:latest
          volumeMounts:
            - mountPath: /db-dumps
              name: db-dumps
      volumes:
        - name: db-dumps
          hostPath:
            path: /mnt/media/backup/immich
